--- a/app/views/characters/edit.html.erb
+++ b/app/views/characters/edit.html.erb
@@ -1,11 +1,11 @@
 <!-- Validation failure messages -->
 <% if @character.errors.any? %>
-<% @character.errors.full_messages.each do |message| %>
-<div class="alert alert-dismissable alert-danger">
-  <button type="button" class="close" data-dismiss="alert" aria-hidden="true">&times;</button>
-  <%= message %>
-</div>
-<% end %>
+  <% @character.errors.full_messages.each do |message| %>
+    <div class="alert alert-dismissable alert-danger">
+      <button type="button" class="close" data-dismiss="alert" aria-hidden="true">&times;</button>
+      <%= message %>
+    </div>
+  <% end %>
 <% end %>
 
 <div class="page-header">
@@ -25,9 +25,6 @@
         </label>
 
         <%= select_tag(:movie_id, options_from_collection_for_select(Movie.all, :id, :title, @character.movie_id), :class => "form-control") %>
-        <p class="help-block">
-          <a href="/movies/new">or add a new movie</a>
-        </p>
       </div>
 
       <!-- Label and input for actor_id -->
@@ -36,7 +33,7 @@
           Actor
         </label>
 
-        <input type="text" id="actor_id" name="actor_id" placeholder="Actor" class="form-control" value="<%= @character.actor_id %>">
+        <%= select_tag(:actor_id, options_from_collection_for_select(Actor.all, :id, :name, @character.actor_id), :class => "form-control") %>
       </div>
 
       <!-- Label and input for name -->
@@ -53,6 +50,9 @@
       </button>
       or
       <a href="/characters/<%= @character.id %>">Cancel</a>
+      <p></p>
+      <p><a href="/movies/new">Add New Movie</a></p>
+      <p><a href="/actors/new">Add New Actor</a></p>
     </form>
   </div>
 </div>
