--- a/app/views/characters/show.html.erb
+++ b/app/views/characters/show.html.erb
@@ -6,10 +6,10 @@
   <div class="col-md-12 mb-2">
     <dl class="dl-horizontal">
       <dt>Movie</dt>
-      <dd><%= @character.movie.title %></dd>
+      <dd><%= @character.movie_id %></dd>
 
       <dt>Actor</dt>
-      <dd><%= @character.actor.name %></dd>
+      <dd><%= @character.actor_id %></dd>
 
       <dt>Name</dt>
       <dd><%= @character.name %></dd>
