--- a/app/views/directors/edit.html.erb
+++ b/app/views/directors/edit.html.erb
@@ -62,3 +62,5 @@
     </form>
   </div>
 </div>
+Contact GitHub API Training Shop Blog About
+© 2016 GitHub, Inc. Terms Privacy Security Status Help
