--- a/app/views/movies/show.html.erb
+++ b/app/views/movies/show.html.erb
@@ -18,60 +18,14 @@
       <dd><%= @movie.description %></dd>
 
       <dt>Image url</dt>
-      <dd><%= @movie.image_url %></dd>
+      <dd><img src="<%= @movie.image_url %>"></dd>
 
       <dt>Director</dt>
-      <a href="/directors/<%= @movie.director_id %>">
-      <%= @movie.director.name %>
-    </a>
+      <dd><a href="/directors/<%= @movie.director_id %>"><%= @movie.director.name %></a></dd>
 
-      <dt>Cast</dt>
-      <dd>
-        <ul class="list-group">
-          <% @movie.characters.each do |character| %>
-          <li class="list-group-item">
-            <a href="/actors/<%= character.actor_id %>">
-              <%= character.actor.name %>
-            </a>
-            (<%= character.name %>)
-          </li>
-          <% end %>
-          <li class="list-group-item list-group-item-success">
-            Add a new character
-          </li>
-          <li class="list-group-item">
-            <form action="/create_character" method="post">
-              <!-- Hidden input for authenticity token to protect from forgery -->
-              <input name="authenticity_token" type="hidden" value="<%= form_authenticity_token %>">
+      <dt>Number of Characters</dt>
+      <dd><%= @movie.characters.count %></dd>
 
-              <input name="movie_id" type="hidden" value="<%= @movie.id %>">
-
-              <!-- Label and input for actor_id -->
-              <div class="form-group">
-                <label for="actor_id" class="control-label">
-                  Actor
-                </label>
-                <%= select_tag(:actor_id, options_from_collection_for_select(Actor.all, :id, :name), :class => "form-control") %>
-                <p class="help-block">
-                  <a href="/actors/new">or add a new actor</a>
-                </p>
-              </div>
-
-              <!-- Label and input for name -->
-              <div class="form-group">
-                <label for="name" class="control-label">
-                  Name
-                </label>
-                <input type="text" id="name" name="name" placeholder="Name" class="form-control">
-              </div>
-
-              <button class="btn btn-success">
-                Create Character
-              </button>
-            </form>
-          </li>
-        </ul>
-      </dd>
     </dl>
 
     <div class="btn-group btn-group-justified">
@@ -85,5 +39,52 @@
         Delete
       </a>
     </div>
+  </div>
+</div>
+
+<ul>
+<% @movie.characters.each do |character| %>
+  <li>
+    <%= character.actor.name %>
+    (<%= character.name %>)
+  </li>
+<% end %>
+</ul>
+
+<div class="row">
+  <div class="col-md-12">
+    <form action="/create_character" method="post">
+      <!-- Hidden input for authenticity token to protect from forgery -->
+      <input name="authenticity_token" type="hidden" value="<%= form_authenticity_token %>">
+
+      <!-- Label and input for movie_id -->
+      <input type="hidden" name="movie_id" value="<%= @movie.id %>">
+
+      <!-- Label and input for actor_id -->
+      <div class="form-group">
+        <label for="actor_id" class="control-label">
+          Actor
+        </label>
+
+        <%= select_tag(:actor_id, options_from_collection_for_select(Actor.all, :id, :name, @character.actor_id), :class => "form-control") %>
+      </div>
+
+      <!-- Label and input for name -->
+      <div class="form-group">
+        <label for="name" class="control-label">
+          Name
+        </label>
+
+        <input type="text" id="name" name="name" placeholder="Name" class="form-control" value="<%= @character.name %>">
+      </div>
+
+      <button class="btn btn-success">
+        Create Character
+      </button>
+      or
+      <a href="/characters">Cancel</a>
+      <p></p>
+      <p><a href="/actors/new">Add New Actor</a></p>
+    </form>
   </div>
 </div>
